rns-lang/test_data/integration/error/lexer/directives/dot_method_descriptor.rns
.method (I)V .([Z)Ljava/lang/String;